fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -125,7 +125,7 @@ body {
 	list-style: none;
     display: flex;
 	align-items: center;
-	gap: 0.4vw;
+	gap: 0.2vw;
 	margin: 0;
 	padding-right: 1em;
 	padding-left: 1em;
